--- a/basic-nginx/index.html
+++ b/basic-nginx/index.html
@@ -233,6 +233,9 @@
         <li><a href="http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4">IRC channel at #openshift on freenode.net</a></li>
       </ul>
     </section>
+    <section class="col-xs-12 col-sm-6 col-md-6">
+      <p>Test Commit 1</p>
+    </section>
   </div> 
   <footer>
     <div class="logo"><a href="https://www.openshift.com/"></a></div>
@@ -242,3 +245,4 @@
 
 </body>
 </html>
+this is a comment
